# Advanced-Datamining

./: .gitignore  README.md  environment.yml
Chapter01/: Werkcollege_v2122-H1.ipynb  Werkcollege_v2324-H1.ipynb  model.py
Chapter02/: Werkcollege_v2223-H2.ipynb  Werkcollege_v2324-H2.ipynb  model.py
Chapter03/: Werkcollege_v2223-H3.html  Werkcollege_v2223-H3.ipynb  Werkcollege_v2324-H3.ipynb  model.py
Chapter04/: Werkcollege_v2122-H4.html  Werkcollege_v2324-H4.ipynb
Chapter05-06/: Werkcollege_v2223-H56.html  Werkcollege_v2324-H56.ipynb
Final-Assignment/: Eindopdracht_v2324.1.ipynb
Final-Assignment2/: eindopdracht_v2324.2.html  eindopdracht_v2324.2.ipynb
vlearning/: README.md  pyproject.toml
vlearning/vlearning/: __init__.py  activation_functions.py  data.py  derivative.py  epochtracker.py  linear_regression.py  loss_functions.py  neuron.py  perceptron.py  pseudo_log.py
vlearning/vlearning/layers/: __init__.py  activationlayer.py  denselayer.py  inputlayer.py  layer.py  losslayer.py  softmaxlayer.py
