[tool.poetry]
name = "vlearning"
version = "0.5.0"
description = "Machine Learning package for the Bioinformatics course Advanced Datamining"
authors = ["VincentTalen <v.k.talen@st.hanze.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
overrides = "^7.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
